--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.2.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^2.0.15"
   }
 }
