--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-file-base64": "^1.0.3",
     "react-hook-form": "^7.43.9",
     "react-loader-spinner": "^5.1.2",
+    "react-modal": "^3.16.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
