--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-calendar": "^3.6.0",
